# StorageView

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: BRAND_ASSETS.md  BUILDING.md  CODE_SIGNING.md  LEGAL.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/apps/: mod.rs
src-tauri/src/cleanup/: mod.rs
src-tauri/src/commands/: app.rs  apps.rs  cleanup.rs  duplicates.rs  mod.rs  reports.rs  scanning.rs  search.rs  system.rs
src-tauri/src/core/: error.rs  migration.rs  mod.rs
src-tauri/src/duplicates/: mod.rs
src-tauri/src/reports/: mod.rs
src-tauri/src/scanning/: mod.rs
src-tauri/src/search/: mod.rs
src-tauri/src/system/: mod.rs
src/app/: App.tsx  navigation.ts  router.tsx
src/app/providers/: ThemeProvider.tsx
src/components/: CommandMenu.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx  TopBar.tsx
src/components/ui/: Button.tsx  Card.tsx  CopyPathButton.tsx  Dialog.tsx  Input.tsx  (+10 more)
src/hooks/: useAppInfo.ts  useDisks.ts  useSortable.ts
src/pages/: AnalyticsPage.tsx  ApplicationsPage.tsx  CleanupPage.tsx  DashboardPage.tsx  ExplorerPage.tsx  NotFoundPage.tsx  ReportsPage.tsx  SearchPage.tsx  SettingsPage.tsx  StoragePage.tsx
src/styles/: globals.css
src/types/: app.ts  apps.ts  browse.ts  cleanup.ts  scan.ts  search.ts  storage.ts  theme.ts
(+57 files in other folders)
