[package]
name = "diskscope"
version = "0.5.0"
description = "DiskScope — Advanced Storage Analyzer"
authors = ["Lemolek"]
license = "SEE LICENSE IN LICENSE"
edition = "2021"

[lib]
name = "diskscope_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sysinfo = "0.33"
trash = "5"
blake3 = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
