[package]
name = "storageview"
version = "0.8.0"
description = "StorageView — Analyze. Visualize. Optimize."
authors = ["Lemolek"]
license = "SEE LICENSE IN LICENSE"
edition = "2021"

[lib]
name = "storageview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sysinfo = "0.33"
trash = "5"
blake3 = "1"
regex = "1"

[target."cfg(windows)".dependencies]
winreg = "0.52"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
